objects/SMAX_PS_Work_Order_Metrics__c.object
<CustomObject>
    <label>Work Order Metrics</label>
    <nameField>
        <label>Work Order Metrics Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Order Metrics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>SMAX_PS_Remote_Fix__c</fullName>
        <label>Remote Fix?</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Work_Order__c</fullName>
        <label>Work Order</label>
        <referenceTo>SVMXC__Service_Order__c</referenceTo>
        <relationshipLabel>Work Order Metrics</relationshipLabel>
        <relationshipName>Work_Order_Metrics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_External_Id__c</fullName>
        <description>The External Id is system populated and should be of the form:  [WO-NUMBER]__[RecordType]</description>
        <externalId>true</externalId>
        <inlineHelpText>The External Id is system populated and should be of the form:  [WO-NUMBER]__[RecordType]</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SMAX_PS_Metrics_Type__c</fullName>
        <label>Metrics Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Field_Service</fullName>
                    <label>Field Service</label>
                </value>
                <value>
                    <fullName>Remote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Invoiced_DateTime__c</fullName>
        <description>Denotes the datetime that a work order was invoiced</description>
        <inlineHelpText>Denotes the datetime that a work order was invoiced</inlineHelpText>
        <label>Invoiced DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Is_First_Time_Fix__c</fullName>
        <label>Is First Time Fix?</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Completed_Datetime__c</fullName>
        <description>Copied from wo.SVMXC__Completed_Date_Time__c</description>
        <label>Completed Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Calculated_Downtime__c</fullName>
        <description>Denotes the calculation between case opened datetime to TECO</description>
        <inlineHelpText>Denotes the calculation between case opened datetime to TECO</inlineHelpText>
        <label>Calculated Downtime</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Last_Labor_Datetime__c</fullName>
        <description>The MAX of the Labor line End Date Time values. Auto-calculated when the WO enters TECO or Remote/Closed.</description>
        <inlineHelpText>The MAX of the Labor line End Date Time values. Auto-calculated when the WO enters TECO or Remote/Closed.</inlineHelpText>
        <label>Last Labor Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Calc_Days_to_Invoice__c</fullName>
        <description>Calculated from Ready for Completed DateTime to Ready for Review DateTime</description>
        <inlineHelpText>Calculated from Ready for Completed DateTime to Ready for Review DateTime</inlineHelpText>
        <label>Calculated Days to Invoice</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Case_Opened_Datetime__c</fullName>
        <description>Copied from the WO.SVMX_PS_Case_Opened_Date_Time__c</description>
        <label>Case Opened Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_First_Labor_DateTime__c</fullName>
        <description>The MIN of the Labor line Start Date Time values. Auto-calculated when the WO enters TECO or Remote/Closed.</description>
        <inlineHelpText>The MIN of the Labor line Start Date Time values. Auto-calculated when the WO enters TECO or Remote/Closed.</inlineHelpText>
        <label>First Labor DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Calc_Call_Upload_Time__c</fullName>
        <description>Denotes the Calculated Call Upload Time by Last Labor DateTime to the Completed DateTime</description>
        <inlineHelpText>Denotes the Calculated Call Upload Time by Last Labor DateTime to the Completed DateTime</inlineHelpText>
        <label>Calculated Call Upload Time</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Number_of_Assignments__c</fullName>
        <label>Number of Assignments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_First_Assigned_Datetime__c</fullName>
        <description>Copied from the WO.SVMXC__First_Assigned_DateTime__c</description>
        <label>First Assigned Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Calculated_Dispatch_Time__c</fullName>
        <description>Calculates the time from created date to to first assigned datetime</description>
        <inlineHelpText>Calculates the time from created date to to first assigned datetime</inlineHelpText>
        <label>Calculated Dispatch Time</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Ready_to_Review_Datetime__c</fullName>
        <description>Copied from the WO.SVMX_PS_Ready_to_Review_Date_Time__c</description>
        <label>Ready to Review Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Repair_Callback_Required__c</fullName>
        <description>Denotes a 1 or 0 for if a previous work order</description>
        <inlineHelpText>Denotes a 1 or 0 for if a previous work order</inlineHelpText>
        <label>Repair Callback Required?</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Calc_Onsite_Response_Time__c</fullName>
        <description>For non remote work orders this is a calculation between case created date time and onsite response time</description>
        <inlineHelpText>For non remote work orders this is a calculation between case created date time and onsite response time</inlineHelpText>
        <label>Calculated Onsite Response Time</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Calc_Tech_Support_Response_Time__c</fullName>
        <description>Denotes the time between case opened time and TECO</description>
        <inlineHelpText>Denotes the time between case opened time and TECO</inlineHelpText>
        <label>Calculated Tech Support Response Time</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
</CustomObject>